...
            align="center"
            style={{ marginTop: spacing[2], marginBottom: spacing[5] }}
          >
            Tarodan'a giriş yaparak tüm özelliklerden yararlanın
          </Text>
          <Button
            testID="profile-go-login-button"
            variant="primary"
            size="lg"
            fullWidth
            icon="log-in-outline"
            title="Giriş Yap"
            onPress={() => router.push('/(auth)/login')}
...
